.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Location_Endpoint__mdt.object
<CustomObject>
    <description>The endpoint root for getting location data from an external source</description>
    <fields>
        <fullName>Incap311__ARCGIS_Dynamic_Layer_Ids__c</fullName>
        <label>Ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__ARCGIS_Dynamic_Layer_Option__c</fullName>
        <label>Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__ARCGIS_Dynamic_Layer_Return_Geometry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Geometry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__ARCGIS_Dynamic_Layer_Tolerance__c</fullName>
        <label>Tolerance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Address_Id_Mapping__c</fullName>
        <label>Address Id Mapping</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Address_Mapping__c</fullName>
        <label>Address Mapping</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__ArcGIS_Dynamic_Layer_URL__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>ARCGIS Dynamic Layer URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Base_URL__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Base URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Incap311__By_Address_Endpoint__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>By Address Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__By_Address_Path__c</fullName>
        <description>Override for the Default Path when making the search by address call.</description>
        <label>By Address Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__By_Id_Endpoint__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>By Id Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__By_Id_Path__c</fullName>
        <description>Override for the ID call to set the path to the entities.</description>
        <label>By Id Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__By_Lat_Lng_Endpoint__c</fullName>
        <defaultValue>&quot; &quot;</defaultValue>
        <label>By Lat Lng Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__By_Lat_Lng_Path__c</fullName>
        <description>Override for the Default Path for the By Lat Long call.</description>
        <label>By Lat Lng Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__By_Sub_Units_Path__c</fullName>
        <label>By Sub Units Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__City_Mapping__c</fullName>
        <label>City Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Custom_Basemaps__c</fullName>
        <label>Custom Basemaps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Default_Basemap__c</fullName>
        <label>Default Basemap</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Default_Map_Zoom__c</fullName>
        <label>Default Map Zoom</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Default_Path__c</fullName>
        <label>Default Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Default_Selected_Map_Zoom__c</fullName>
        <defaultValue>18</defaultValue>
        <description>A zoom level to default to when a location is selected.</description>
        <label>Default Selected Map Zoom</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Highlights_Layer_Field__c</fullName>
        <description>The field to compare against on the layers (as defined by the Highlights Layer URL)</description>
        <label>Highlights Layer Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Highlights_Layer_URL__c</fullName>
        <description>URL of the layer to highlight.</description>
        <label>Highlights Layer URL</label>
        <length>1028</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Highlights_Location_Field__c</fullName>
        <description>The field on the location (developer field name) to use when comparing against returned layers. Compared against the Highlights Layer Field</description>
        <label>Highlights Location Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Latitude_Mapping__c</fullName>
        <label>Latitude Mapping</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Layers_Endpoint__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Layers Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Longitude_Mapping__c</fullName>
        <label>Longitude Mapping</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Map_Center_Latitude__c</fullName>
        <label>Map Center Latitude</label>
        <precision>12</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Map_Center_Longitude__c</fullName>
        <label>Map Center Longitude</label>
        <precision>12</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Neighbourhood_Mapping__c</fullName>
        <label>Neighbourhood Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Parcel_Mapping__c</fullName>
        <label>Parcel Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Place_Address_Mapping__c</fullName>
        <label>Place Address Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Place_Name_Mapping__c</fullName>
        <label>Place Name Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Precinct_Ward_Mapping__c</fullName>
        <label>Precinct Ward Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__State_Mapping__c</fullName>
        <label>State Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Street_Id_Mapping__c</fullName>
        <label>Street Id Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Street_Name_Mapping__c</fullName>
        <label>Street Name Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Street_Number_Mapping__c</fullName>
        <label>Street Number Mapping</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__SubAddrUnit_Mapping__c</fullName>
        <label>SubAddrUnit Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Sub_Address_Endpoint__c</fullName>
        <label>Sub Address Endpoint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Sub_Address_ID_Mapping__c</fullName>
        <label>Sub Address ID Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Sub_Unit_Where_Fields__c</fullName>
        <description>Fields that are used in the WHERE condition sent to ESRI.</description>
        <label>Sub Unit Where Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__SufType_Mapping__c</fullName>
        <label>SufType Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Unit_Mapping__c</fullName>
        <label>Unit Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Ward_Mapping__c</fullName>
        <label>Ward Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__X_Coord_Mapping__c</fullName>
        <label>X Coord Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Y_Coord_Mapping__c</fullName>
        <label>Y Coord Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Zip_Code_Mapping__c</fullName>
        <label>Zip Code Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Location Endpoint</label>
    <listViews>
        <fullName>Incap311__All_INCAP</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Incap311__Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All (INCAP)</label>
    </listViews>
    <pluralLabel>Location Endpoints</pluralLabel>
</CustomObject>